Added two players

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         }
         .fav_sports{
             background-color: yellow;
-            border: 2px solid blue;
+            border: 5px solid blue;
             margin-top: 50px;
             text-align: center;
-            height: 60vh;
+            height: 100vh;
         }
         .fav_sports table{
            /* border: 2px solid black; */
@@ -48,28 +48,49 @@
                 <tr>
                     <th>No.</th>
                     <th>Name of Sport</th>
+                    <th>Players</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
                     <td>Cricket</td>
+                    <td>
+                        <p>MS Dhoni</p>
+                        <p>Sachin Tendulkar</p>
+                    </td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Badminton</td>
+                    <td>
+                        <p>Saina Nehwal</p>
+                        <p>PV Sindhu</p>
+                    </td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>Vollyball</td>
+                    <td>
+                        <p>Jimmy George</p>
+                        <p>Balwant Singh Sagwal </p>
+                    </td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>Football</td>
+                    <td>
+                        <p>Sunil Chhetri</p>
+                        <p>Gurpreet Singh Sandhu</p>
+                    </td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>Kabaddi</td>
+                    <td>
+                        <p>Anoop Kumar</p>
+                        <p>Ajay Thakur</p>
+                    </td>
                 </tr>
             </tbody>
         </table>
