Added Acheievments of players

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <th>No.</th>
                     <th>Name of Sport</th>
                     <th>Players</th>
+                    <th>Achievement</th>
                 </tr>
             </thead>
             <tbody>
@@ -59,6 +60,10 @@
                         <p>MS Dhoni</p>
                         <p>Sachin Tendulkar</p>
                     </td>
+                    <td>
+                        <p>Win All <strong>ICC</strong> Trophies as Captain And Most Successful Captain & Wicket keeper of <strong>INDIA</strong>.</p>
+                        <p>Honoured with <strong>Bharat Ratna</strong> and Record of 100 Centuries with Most No. of runs in World.</p>
+                    </td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -66,6 +71,10 @@
                     <td>
                         <p>Saina Nehwal</p>
                         <p>PV Sindhu</p>
+                    </td>
+                    <td>
+                        <p><strong>Bronze Medal</strong> in <strong>London Olympics 2012</strong> And Honoured with <strong>Padma Shri(2010), Padma Bhushan(2016), Arjuna Award(2009)</strong>.</p>
+                        <p><strong>Silver Medal</strong> in <strong>Rio Olympics 2016</strong> and <strong>Bronze Medal</strong> in <strong>Tokyo Olympics 2020</strong> and Honoured with <strong>Padma Bhushan(2021)</strong>.</p>
                     </td>
                 </tr>
                 <tr>
@@ -75,6 +84,10 @@
                         <p>Jimmy George</p>
                         <p>Balwant Singh Sagwal </p>
                     </td>
+                    <td>
+                        <p>Honoured with <strong>Arjuna Award</strong> and First Professional Indian volleyball player.</p>
+                        <p>Honoured with <strong>Arjuna Award</strong></p>
+                    </td>
                 </tr>
                 <tr>
                     <td>4</td>
@@ -83,6 +96,10 @@
                         <p>Sunil Chhetri</p>
                         <p>Gurpreet Singh Sandhu</p>
                     </td>
+                    <td>
+                        <p>Honoured with <strong>Padam Shri(2019) and Major Dhyan Chand Khel Ratna Award(2021)</strong> and AIFF Player of the year award (six times).</p>
+                        <p>Honoured with <strong>Arjuna Award(2019)</strong></p>
+                    </td>
                 </tr>
                 <tr>
                     <td>5</td>
@@ -90,6 +107,10 @@
                     <td>
                         <p>Anoop Kumar</p>
                         <p>Ajay Thakur</p>
+                    </td>
+                    <td>
+                        <p> Honoured with <strong>Arjuna Award(2012)</strong> Won <strong>Gold Medals at Asian Games 2010 and 2014</strong> and Won their Record Third Kabaddi <strong>World Cup in 2016</strong> as Captain.</p>
+                        <p>Honoured with <strong>Padama Shri Award(2019) and Arjuna Award(2019)</strong> Won <strong>Gold Medal at Asian Games 2014.</strong></p>
                     </td>
                 </tr>
             </tbody>
